# Kronos

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.hermes/plans/: 2026-07-22_kronos-alpha-quant-experiment.md  2026-07-22_kronos-alpha-terminal-mvp.md  2026-07-22_kronosbot-forex-paper-trading-webui.md  2026-07-22_kronosbot-forex-paper-trading.md
docs/: kronosbot.md
examples/: prediction_batch_example.py  prediction_example.py  prediction_wo_vol_example.py
examples/data/: XSHG_5min_600977.csv
kronosbot/: cli.py  model_loader.py
kronosbot/alpha/: __init__.py  app.py  backtest.py  experiment.py  forecast.py  signal.py  variants.py
kronosbot/alpha/templates/: alpha_dashboard.html
kronosbot/broker/: base.py  ibkr.py  paper.py
kronosbot/data/: feed.py
kronosbot/features/: signals.py
kronosbot/journal/: store.py
kronosbot/strategy/: kronos_strategy.py  runner.py
kronosbot/webui/: app.py
kronosbot/webui/static/css/: style.css
kronosbot/webui/static/js/: app.js
kronosbot/webui/templates/: backtest.html  backtest_result.html  base.html  dashboard.html  journal.html  paper.html  settings.html  strategies.html  symbols.html
model/: kronos.py
tests/kronosbot/: test_broker.py  test_cli.py  test_feed.py  test_journal.py  test_kronos_strategy.py  test_model_loader.py  test_runner.py  test_scaffold.py  test_signals.py  test_webui.py
tests/kronosbot/alpha/: test_app.py  test_backtest.py  test_backtest_hooks.py  test_experiment.py  test_forecast.py  test_signal.py  test_variants.py
